--- a/catalog.html
+++ b/catalog.html
@@ -149,40 +149,50 @@
 							</div>
 						</li>
 						<li class="catalog-item">
-							<img src="img/img-sedona.jpg" width="360" height="576" alt="Sedona">
+							<img src="img/img-pink.jpg" width="360" height="576" alt="Pink">
 							<div class="info-cell">
-								<h3>Sedona</h3>
-								<p>Информационный&nbsp;сайт для&nbsp;туристов</p>
+								<h3>Pink app</h3>
+								<p>Продуктовый&nbsp;лендинг приложения&nbsp;для&nbsp;iOS&nbsp;и&nbsp;Android</p>
 								<a class="price-button button red-button" href="#">
 									<span class="button-content" tabindex="-1">9900 руб.</span>
 								</a>
 							</div>
 						</li>
 						<li class="catalog-item">
-							<img src="img/img-sedona.jpg" width="360" height="576" alt="Sedona">
+							<img src="img/img-barbershop.jpg" width="360" height="576" alt="Barbershop">
 							<div class="info-cell">
-								<h3>Sedona</h3>
-								<p>Информационный&nbsp;сайт для&nbsp;туристов</p>
+								<h3>Barbershop</h3>
+								<p>Сайт&nbsp;салона&nbsp;красоты. Для&nbsp;мужчин,&nbsp;да.</p>
 								<a class="price-button button red-button" href="#">
 									<span class="button-content" tabindex="-1">9900 руб.</span>
 								</a>
 							</div>
 						</li>
 						<li class="catalog-item">
-							<img src="img/img-sedona.jpg" width="360" height="576" alt="Sedona">
+							<img src="img/img-mishka.jpg" width="360" height="576" alt="Mishka">
 							<div class="info-cell">
-								<h3>Sedona</h3>
-								<p>Информационный&nbsp;сайт для&nbsp;туристов</p>
+								<h3>Mishka</h3>
+								<p>Интернет-магазин вязаных&nbsp;игрушек</p>
 								<a class="price-button button red-button" href="#">
 									<span class="button-content" tabindex="-1">9900 руб.</span>
 								</a>
 							</div>
 						</li>
 						<li class="catalog-item">
-							<img src="img/img-sedona.jpg" width="360" height="576" alt="Sedona">
+							<img src="img/img-aplus.jpg" width="360" height="576" alt="A plus">
 							<div class="info-cell">
-								<h3>Sedona</h3>
-								<p>Информационный&nbsp;сайт для&nbsp;туристов</p>
+								<h3>A plus</h3>
+								<p>Лендинг&nbsp;курсов&nbsp;повышения квалификации</p>
+								<a class="price-button button red-button" href="#">
+									<span class="button-content" tabindex="-1">9900 руб.</span>
+								</a>
+							</div>
+						</li>
+						<li class="catalog-item">
+							<img src="img/img-kvast.jpg" width="360" height="576" alt="Кваст">
+							<div class="info-cell">
+								<h3>Кваст</h3>
+								<p>Промо-сайт&nbsp;производителя крафтового&nbsp;кваса</p>
 								<a class="price-button button red-button" href="#">
 									<span class="button-content" tabindex="-1">9900 руб.</span>
 								</a>
