--- a/catalog.html
+++ b/catalog.html
@@ -114,8 +114,8 @@
 					<div class="catalog-sorting">
 						<span>Сортировать:</span>
 						<ul class="sorting-list">
-							<li class="sorting-item">
-								<a href="#">По цене</a>
+							<li class="sorting-item sorting-current">
+								<a>По цене</a>
 							</li>
 							<li class="sorting-item">
 								<a href="#">По типу</a>
@@ -126,7 +126,7 @@
 						</ul>
 						<ul class="direction-list">
 							<li class="direction-item">
-								<a class="direction-down" href="#">
+								<a class="direction-down direction-current">
 									<span class="visually-hidden">По убыванию</span>
 								</a>
 							</li>
@@ -197,6 +197,28 @@
 									<span class="button-content" tabindex="-1">9900 руб.</span>
 								</a>
 							</div>
+						</li>
+					</ul>
+					<ul class="pagination-list">
+						<li class="pagination-item">
+							<a class="pagination-button-active button gray-button">
+								<span class="button-content" tabindex="-1">1</span>
+							</a>
+						</li>
+						<li class="pagination-item">
+							<a class="pagination-button button gray-button" href="#">
+								<span class="button-content" tabindex="-1">2</span>
+							</a>
+						</li>
+						<li class="pagination-item">
+							<a class="pagination-button button gray-button" href="#">
+								<span class="button-content" tabindex="-1">3</span>
+							</a>
+						</li>
+						<li class="pagination-item">
+							<a class="pagination-button button gray-button" href="#">
+								<span class="button-content" tabindex="-1">Следующая</span>
+							</a>
 						</li>
 					</ul>
 				</section> 
